@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/basename.c)
-AM_INIT_AUTOMAKE(cscope, 15.2b)
+AM_INIT_AUTOMAKE(cscope, 15.3)
 AM_CONFIG_HEADER(config.h:config.h.in)
 AC_CANONICAL_HOST
 
