@@ -1,3 +1,5 @@
+(2001/07/02 - petrs)   15.3 version name, man page update, README update.
+                       Make dist includes webcscope directory.
 (2001/06/29 - ragho)   webcscope added to contrib 
 (2001/06/29 - broeker) Re-formatted README, and added a tip working around 
 	               buggy libcurses on HP-UX 10.
